--- a/main.css
+++ b/main.css
@@ -1,14 +1,50 @@
 
-body {
+html, body {
     font-family: Lato;
     font-size: 14px;
     line-height: 1.42857143;
     color: #ffffff;
     background-color: #2F3133;
+    margin: 0;
+    padding: 0;
+    text-align: center;
 }
-h1 {
+
+div {
+    margin: 0;
+    width: 100%;
+    height: 100%;
+    box-sizing:border-box;
+    -moz-box-sizing:border-box;
+    -webkit-box-sizing:border-box;
+}
+
+.titleblock{
+    background-color: #001A38;
+}
+p{ /*text*/
+    opacity: 70%;
+}
+
+h1 { /* Title */
     font-size: 100px;
 }
-h2 {
+h2 { /* subtitle */
     opacity: 60%;
+}
+
+h3{ /* heading 1 */
+    text-decoration: underline;
+    font-size: x-large;
+    
+}
+
+h4{ /* heading 2 */
+    text-decoration:
+    
+}
+
+footer {
+    opacity: 50%;
+    text-align: end;
 }
