--- a/main.css
+++ b/main.css
@@ -1,7 +1,13 @@
-html, body {
-    font-family: Lato;
+html {
+    font-family: sans-serif;
+    -ms-text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
+  }
+
+body {
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 14px;
-    line-height: 1.42857143;
+    line-height: 1.42857;
     color: #ffffff;
     background-color: #2F3133;
     margin: 0;
@@ -18,9 +24,26 @@ div {
     -webkit-box-sizing:border-box;
 }
 
+.spacer { /*just a tool to get some space*/
+    clear: both;
+    height: 20px;
+  }
+
+hr {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  border: 1;
+  border-top: 1px solid #34495e;
+  margin-left: 10%;
+  margin-right: 10%;
+}
+
+
 .titleblock{
     background-color: #001A38;
+    padding-top: 1px;
 }
+
 p{ /*text*/
     opacity: 70%;
 }
