--- a/main.css
+++ b/main.css
@@ -34,8 +34,8 @@ hr {
   margin-bottom: 20px;
   border: 1;
   border-top: 1px solid #34495e;
-  margin-left: 10%;
-  margin-right: 10%;
+  margin-left: 30vw;
+  margin-right: 30vw;
 }
 
 
