--- a/main.css
+++ b/main.css
@@ -60,6 +60,28 @@ hr {
     margin: auto;
 }
 
+.image-grid{
+    --gap: 16px;
+    --num-cols: 3;
+    --num-height: 300px;
+
+    box-sizing: border-box;
+    padding: var(--gap);
+
+    display: grid;
+    grid-template-columns: repeat(var(--num-cols), 1fr);
+    grid-auto-rows: var(--row-height);
+    gap: var(--gap);   
+}
+
+.image-grid > img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+
+
 p { /*text*/
     opacity: 70%;
 }
