--- a/main.css
+++ b/main.css
@@ -64,13 +64,14 @@ hr {
     display: flex;
     flex-wrap: wrap;
     padding: 0 4px;
+    
 }
   
 /* Create four equal columns that sits next to each other */
 .column {
     flex: 25%;
     max-width: 25%;
-    padding: 0 4px;
+    margin: auto;
 }
   
 .column img {
