--- a/main.css
+++ b/main.css
@@ -50,6 +50,33 @@ hr { /*Line*/
   margin-right: 30vw;
 }
 
+/* Add a black background color to the top navigation */
+.topnav {
+  background-color: #2F3133;
+  overflow: hidden;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+  background-color: #003367;
+  color: white;
+}
 
 .titleblock{
     background-color: #001A38;
