--- a/main.css
+++ b/main.css
@@ -142,7 +142,12 @@ h3{ /* heading 1 */
 }
 
 h4{ /* heading 2 */
-    opacity: 60%;;   
+    opacity: 60%;  
+}
+
+#precinctpdf{
+    width:100%;
+    height:100vh;
 }
 
 footer {
