--- a/main.css
+++ b/main.css
@@ -6,13 +6,14 @@ html {
 
 body {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-size: 14px;
+    font-size: 20px;
     line-height: 1.42857;
     color: #ffffff;
     background-color: #2F3133;
     margin: 0;
     padding: 0;
     text-align: center;
+    
 }
 
 div {
@@ -53,15 +54,18 @@ hr { /*Line*/
 /* Add a black background color to the top navigation */
 .topnav {
   background-color: #2F3133;
+  opacity: 90%;
   overflow: hidden;
+  position: sticky;
+  top:0;
 }
 
 /* Style the links inside the navigation bar */
 .topnav a {
-  float: left;
+  float: right;
   color: #f2f2f2;
   text-align: center;
-  padding: 14px 16px;
+  padding: 20px 60px;
   text-decoration: none;
   font-size: 17px;
 }
@@ -80,11 +84,13 @@ hr { /*Line*/
 
 .titleblock{
     background-color: #001A38;
+    
 }
 
 .container{
     width: 40vw;
     margin: auto;
+
 }
 
 .row {
@@ -102,7 +108,7 @@ hr { /*Line*/
 }
   
 .column img {
-    margin-top: 8px;
+    margin-top: 60px;
     vertical-align: middle;
     width: 100%;
 }
@@ -148,6 +154,12 @@ h4{ /* heading 2 */
 #precinctpdf{
     width:100%;
     height:100vh;
+}
+
+table, th, td {
+    border:1px solid white;
+    margin: auto;
+    padding: auto;
 }
 
 footer {
