--- a/main.css
+++ b/main.css
@@ -65,7 +65,7 @@ hr { /*Line*/
   float: right;
   color: #f2f2f2;
   text-align: center;
-  padding: 20px 60px;
+  padding: 1% 3%;
   text-decoration: none;
   font-size: 17px;
 }
